<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_bg"
    tools:context=".SelectMode">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_level_you_want_to_play"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:layout_marginTop="100sp"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/butt_easy"
        android:layout_width="300sp"
        android:layout_height="80sp"
        android:background="@drawable/button_rounded"
        android:layout_gravity="center"
        android:layout_marginTop="50sp"
        android:text="@string/easy"
        android:textColor="#ffffff"
        android:textSize="40sp"
        />

    <Button
        android:id="@+id/butt_medium"
        android:layout_width="300sp"
        android:layout_height="80sp"
        android:background="@drawable/button_rounded"
        android:layout_gravity="center"
        android:layout_marginTop="50sp"
        android:text="@string/medium"
        android:textColor="#ffffff"
        android:textSize="40sp"
        />

    <Button
        android:id="@+id/butt_hard"
        android:layout_width="300sp"
        android:layout_height="80sp"
        android:background="@drawable/button_rounded"
        android:layout_gravity="center"
        android:layout_marginTop="45sp"
        android:text="@string/hard"
        android:textColor="#ffffff"
        android:textSize="40sp"
        />

</LinearLayout>