<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_bg"
    tools:context=".PlayScreen">

    <ImageButton
        android:id="@+id/butt_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="318dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="29dp"
        android:background="?android:attr/selectableItemBackground"
        android:src="@drawable/pause__1_"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode"
        android:textSize="40sp"
        android:textColor="#ffffff"
        android:layout_marginTop="20sp"
        android:layout_marginStart="20sp"
        />

    <TextView
        android:layout_width="300sp"
        android:layout_height="35sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="149dp"
        android:layout_marginTop="107dp"
        android:layout_marginEnd="155dp"
        android:background="#ffffff"
        android:text="@string/name"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="168dp"
        android:layout_marginTop="178dp"
        android:layout_marginEnd="176dp"
        android:text="@string/time"
        android:textColor="#ffffff"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/butt_mic"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="76dp"
        android:layout_marginTop="237dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="232dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/choose_it"
        app:srcCompat="@drawable/microphone150" />

    <TextView
        android:id="@+id/textTv"
        android:text="Press mic button to input voice..."
        android:textSize="18sp"
        android:textColor="#000"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="69dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="140dp"
        android:background="#ffffff" />


</RelativeLayout>