<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".StopScreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginStart="83dp"
        android:layout_marginTop="100sp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="551dp"
        android:text="@string/pause"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="60sp" />

    <Button
        android:id="@+id/butt_resume"
        android:layout_width="300sp"
        android:layout_height="80sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginStart="58dp"
        android:layout_marginTop="50sp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="422dp"
        android:background="@drawable/button_rounded"
        android:text="@string/resume"
        android:textColor="#ffffff"
        android:textSize="40sp" />

    <Button
        android:id="@+id/butt_restart"
        android:layout_width="300sp"
        android:layout_height="80sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginStart="56dp"
        android:layout_marginTop="50sp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="299dp"
        android:background="@drawable/button_rounded"
        android:text="@string/restart"
        android:textColor="#ffffff"
        android:textSize="40sp" />

    <Button
        android:id="@+id/butt_menu"
        android:layout_width="300sp"
        android:layout_height="80sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginStart="53dp"
        android:layout_marginTop="45sp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="168dp"
        android:background="@drawable/button_rounded"
        android:text="@string/menu"
        android:textColor="#ffffff"
        android:textSize="40sp" />

    <Button
        android:id="@+id/butt_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="166dp"
        android:layout_marginEnd="157dp"
        android:layout_marginBottom="52dp"
        />
</RelativeLayout>

